# calculatrice

./: .calcule.man.swp  Makefile  Makefile.am  Makefile.orig  README  README.md  calcule  calcule-data.c  calcule.1  calcule.c  calcule.man  calcule.patch  configure.ac  hex2bin_sh.bsd.patch  libcalcule.c  parsearg.c  parsearg.h
calcule/: .calcule-data.h.swp  .calcule.1.swp  .calcule.c.swp  Makefile  Makefile.am  calcule-data.c  calcule-data.h  calcule.1  calcule.c
calcule/.deps/: calcule-data.Po  calcule.Po
calcule/.libs/: calcule
calcule/calcule/: calcule-data.c
calcule/ntest/: ntest.1  ntest.c
compare/: .compare.1.swp  .compare.c.swp  Makefile.am  compare.1  compare.c  mcompare.1
exemple/: Makefile  README.src  calcule-data.c  calcule-data.h  calcule.1  calcule.c  ntest.c
lib/: Makefile.in  parsearg.c
ntest/: .ntest.c.swp  Makefile.am  ntest.1  ntest.c
ntest/.deps/: ntest.Po
ntest/.libs/: ntest
parsearg/: Makefile  Makefile.in  libparsearg.la  parsearg.lo
parsearg/.deps/: parsearg.Plo
parsearg/.libs/: libparsearg.la  libparsearg.lai  libparsearg.so.0.0.0
scripts/: .hex2bin.sh.swp  Makefile  binary.sh  dec2bin.sh  dec2hex.sh  decimal.sh  hex2bin.sh  hex2bin.sh.orig  hex2bin.sh.rej  hex2bin_sh.bsd.patch  hexadecimal.sh
scripts.man/: Makefile.am  dec2bin.sh.1  decimal.sh.1  hex2bin.sh.1
src/: calcule.c
